@@ -1,3 +1,5 @@
+- change detection order of bootloader so that it'll prioritize in the order
+  of grub2 -> grub -> lilo rather than lilo -> grub -> grub2
 - in stead of modifying /etc/passwd directly, just simply use 'usermod'
 - add support for SHA512
 
